Changed the picture's size - 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@ body {
     padding-right: 40px;
 }
 img {
-    width: 20vw;
+    margin-left: 3vw;
+    width: 12vw;
 }
 @media only screen and (min-width: 768px){
     .pad {
